--- a/노는법.css
+++ b/노는법.css
@@ -1373,7 +1373,7 @@
 }
 
 .u-section-7 .u-sheet-1 {
-  min-height: 669px;
+  min-height: 1148px;
 }
 
 .u-section-7 .u-text-1 {
@@ -1384,7 +1384,7 @@
 
 .u-section-7 .u-list-1 {
   width: 1140px;
-  margin: 30px 0 60px;
+  margin: 30px 0 0;
 }
 
 .u-section-7 .u-repeater-1 {
@@ -1402,7 +1402,7 @@
 }
 
 .u-section-7 .u-group-1 {
-  min-height: 338px;
+  min-height: 370px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
@@ -1417,7 +1417,7 @@
 .u-section-7 .u-text-2 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-3 {
@@ -1433,7 +1433,7 @@
 }
 
 .u-section-7 .u-group-2 {
-  min-height: 313px;
+  min-height: 370px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
@@ -1447,7 +1447,7 @@
 .u-section-7 .u-text-4 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-5 {
@@ -1463,7 +1463,7 @@
 }
 
 .u-section-7 .u-group-3 {
-  min-height: 313px;
+  min-height: 370px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
@@ -1477,11 +1477,22 @@
 .u-section-7 .u-text-6 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-7 {
   margin: 15px 23px 0 30px;
+}
+
+.u-section-7 .u-list-2 {
+  width: 1140px;
+  margin: 30px auto 60px 0;
+}
+
+.u-section-7 .u-repeater-2 {
+  min-height: 375px;
+  grid-template-columns: 33.3333% 33.3333% 33.3333%;
+  grid-gap: 0px 0px;
 }
 
 .u-section-7 .u-list-item-4 {
@@ -1493,10 +1504,11 @@
 }
 
 .u-section-7 .u-group-4 {
-  min-height: 313px;
+  min-height: 338px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
+  background-image: none;
   box-shadow: 5px 5px 19px 0 rgba(0,0,0,0.05);
 }
 
@@ -1507,7 +1519,7 @@
 .u-section-7 .u-text-8 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-9 {
@@ -1523,7 +1535,7 @@
 }
 
 .u-section-7 .u-group-5 {
-  min-height: 313px;
+  min-height: 338px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
@@ -1537,7 +1549,7 @@
 .u-section-7 .u-text-10 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-11 {
@@ -1553,7 +1565,7 @@
 }
 
 .u-section-7 .u-group-6 {
-  min-height: 313px;
+  min-height: 338px;
   margin-bottom: 0;
   margin-top: 0;
   height: auto;
@@ -1567,55 +1579,11 @@
 .u-section-7 .u-text-12 {
   font-size: 0.9375rem;
   font-weight: 700;
-  margin: 15px 23px 0 183px;
+  margin: 15px 23px 0 121px;
 }
 
 .u-section-7 .u-text-13 {
   margin: 15px 23px 0 30px;
-}
-
-.u-section-7 .u-list-item-7 {
-  animation-duration: 1000ms;
-}
-
-.u-section-7 .u-container-layout-13 {
-  padding: 30px;
-}
-
-.u-section-7 .u-group-7 {
-  min-height: 313px;
-  margin-bottom: 0;
-  margin-top: 0;
-  height: auto;
-  box-shadow: 5px 5px 19px 0 rgba(0,0,0,0.05);
-}
-
-.u-section-7 .u-container-layout-14 {
-  padding: 18px 0;
-}
-
-.u-section-7 .u-text-14 {
-  font-size: 0.9375rem;
-  font-weight: 700;
-  margin: 15px 23px 0 183px;
-}
-
-.u-section-7 .u-text-15 {
-  margin: 15px 23px 0 30px;
-}
-
-.u-section-7 .u-gallery-nav-1 {
-  position: absolute;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-.u-section-7 .u-gallery-nav-2 {
-  position: absolute;
-  right: 10px;
-  width: 40px;
-  height: 40px;
 }
 
 @media (max-width: 1199px) {
@@ -1632,66 +1600,99 @@
   }
 
   .u-section-7 .u-text-2 {
-    margin-left: 6px;
+    margin-left: 0;
   }
 
   .u-section-7 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .u-section-7 .u-group-2 {
     height: auto;
   }
 
-  .u-section-7 .u-text-5 {
+  .u-section-7 .u-text-4 {
     margin-left: 0;
-    margin-right: 0;
+  }
+
+  .u-section-7 .u-text-5 {
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .u-section-7 .u-group-3 {
     height: auto;
   }
 
-  .u-section-7 .u-text-7 {
+  .u-section-7 .u-text-6 {
     margin-left: 0;
-    margin-right: 0;
+  }
+
+  .u-section-7 .u-text-7 {
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .u-section-7 .u-list-2 {
+    width: 940px;
+  }
+
+  .u-section-7 .u-repeater-2 {
+    min-height: 309px;
+    grid-template-columns: repeat(3, 33.333333333333336%);
   }
 
   .u-section-7 .u-group-4 {
+    min-height: 370px;
     height: auto;
   }
 
+  .u-section-7 .u-text-8 {
+    width: auto;
+    margin-right: 15px;
+    margin-left: -15px;
+  }
+
   .u-section-7 .u-text-9 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .u-section-7 .u-group-5 {
     height: auto;
   }
 
+  .u-section-7 .u-text-10 {
+    width: auto;
+    margin-right: 15px;
+    margin-left: -15px;
+  }
+
   .u-section-7 .u-text-11 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .u-section-7 .u-group-6 {
     height: auto;
   }
 
+  .u-section-7 .u-text-12 {
+    width: auto;
+    margin-right: 15px;
+    margin-left: -15px;
+  }
+
   .u-section-7 .u-text-13 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-7 .u-group-7 {
-    height: auto;
-  }
-
-  .u-section-7 .u-text-15 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
 
@@ -1702,11 +1703,11 @@
 
   .u-section-7 .u-repeater-1 {
     grid-template-columns: 50% 50%;
-    min-height: 473px;
+    min-height: 710px;
   }
 
-  .u-section-7 .u-text-2 {
-    margin-left: 0;
+  .u-section-7 .u-text-3 {
+    margin-right: 23px;
   }
 
   .u-section-7 .u-text-5 {
@@ -1717,20 +1718,13 @@
     margin-right: 23px;
   }
 
-  .u-section-7 .u-text-9 {
-    margin-right: 23px;
+  .u-section-7 .u-list-2 {
+    width: 720px;
   }
 
-  .u-section-7 .u-text-11 {
-    margin-right: 23px;
-  }
-
-  .u-section-7 .u-text-13 {
-    margin-right: 23px;
-  }
-
-  .u-section-7 .u-text-15 {
-    margin-right: 23px;
+  .u-section-7 .u-repeater-2 {
+    min-height: 710px;
+    grid-template-columns: repeat(2, 50%);
   }
 }
 
@@ -1748,13 +1742,21 @@
     padding-right: 10px;
   }
 
+  .u-section-7 .u-text-3 {
+    margin-top: 42px;
+    margin-left: 48px;
+    margin-right: 48px;
+  }
+
   .u-section-7 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-7 .u-text-4 {
-    margin-left: 144px;
+  .u-section-7 .u-text-5 {
+    margin-top: 42px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 
   .u-section-7 .u-container-layout-5 {
@@ -1762,8 +1764,18 @@
     padding-right: 10px;
   }
 
-  .u-section-7 .u-text-6 {
-    margin-left: 144px;
+  .u-section-7 .u-text-7 {
+    margin-top: 42px;
+    margin-left: 48px;
+    margin-right: 48px;
+  }
+
+  .u-section-7 .u-list-2 {
+    width: 540px;
+  }
+
+  .u-section-7 .u-repeater-2 {
+    grid-template-columns: 100%;
   }
 
   .u-section-7 .u-container-layout-7 {
@@ -1772,7 +1784,15 @@
   }
 
   .u-section-7 .u-text-8 {
-    margin-left: 144px;
+    margin-top: 23px;
+    margin-right: 23px;
+    margin-left: -23px;
+  }
+
+  .u-section-7 .u-text-9 {
+    margin-top: 34px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 
   .u-section-7 .u-container-layout-9 {
@@ -1781,7 +1801,15 @@
   }
 
   .u-section-7 .u-text-10 {
-    margin-left: 144px;
+    margin-top: 23px;
+    margin-right: 23px;
+    margin-left: -23px;
+  }
+
+  .u-section-7 .u-text-11 {
+    margin-top: 34px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 
   .u-section-7 .u-container-layout-11 {
@@ -1790,20 +1818,23 @@
   }
 
   .u-section-7 .u-text-12 {
-    margin-left: 144px;
+    margin-top: 23px;
+    margin-right: 23px;
+    margin-left: -23px;
   }
 
-  .u-section-7 .u-container-layout-13 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-7 .u-text-14 {
-    margin-left: 144px;
+  .u-section-7 .u-text-13 {
+    margin-top: 34px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 1363px;
+  }
+
   .u-section-7 .u-text-1 {
     font-size: 2.5rem;
     width: auto;
@@ -1811,41 +1842,111 @@
   }
 
   .u-section-7 .u-list-1 {
-    width: 340px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-7 .u-repeater-1 {
+    min-height: 1194px;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-bottom: 19px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: auto;
+    margin-top: 13px;
+    margin-right: 32px;
+    margin-left: 136px;
+  }
+
+  .u-section-7 .u-text-3 {
+    margin-top: 17px;
+    margin-right: 32px;
+    margin-left: 23px;
+  }
+
+  .u-section-7 .u-container-layout-3 {
+    padding-bottom: 19px;
   }
 
   .u-section-7 .u-text-4 {
-    margin-left: 89px;
+    width: auto;
+    margin-top: 13px;
+    margin-right: 32px;
+    margin-left: 136px;
+  }
+
+  .u-section-7 .u-text-5 {
+    margin-top: 17px;
+    margin-right: 32px;
+    margin-left: 23px;
+  }
+
+  .u-section-7 .u-container-layout-5 {
+    padding-bottom: 19px;
   }
 
   .u-section-7 .u-text-6 {
-    margin-left: 89px;
+    width: auto;
+    margin-top: 13px;
+    margin-right: 32px;
+    margin-left: 136px;
+  }
+
+  .u-section-7 .u-text-7 {
+    margin-top: 17px;
+    margin-right: 32px;
+    margin-left: 23px;
+  }
+
+  .u-section-7 .u-list-2 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-7 .u-text-8 {
-    margin-left: 89px;
+    margin-top: 14px;
+  }
+
+  .u-section-7 .u-text-9 {
+    margin-top: 17px;
+    margin-left: 23px;
+    margin-right: 23px;
   }
 
   .u-section-7 .u-text-10 {
-    margin-left: 89px;
+    margin-top: 14px;
+  }
+
+  .u-section-7 .u-text-11 {
+    margin-top: 17px;
+    margin-left: 23px;
+    margin-right: 23px;
   }
 
   .u-section-7 .u-text-12 {
-    margin-left: 89px;
+    margin-top: 14px;
   }
 
-  .u-section-7 .u-text-14 {
-    margin-left: 89px;
+  .u-section-7 .u-text-13 {
+    margin-top: 17px;
+    margin-left: 23px;
+    margin-right: 23px;
   }
 }.u-section-8 .u-sheet-1 {
-  min-height: 918px;
+  min-height: 903px;
 }
 
 .u-section-8 .u-text-1 {
   font-size: 4.375rem;
   font-weight: 700;
-  animation-duration: 1000ms;
-  margin: 70px 0 0 auto;
+  margin: 64px 0 0 auto;
 }
 
 .u-section-8 .u-layout-wrap-1 {
@@ -1911,8 +2012,8 @@
 }
 
 .u-section-8 .u-layout-wrap-2 {
-  margin-top: -24px;
-  margin-bottom: 37px;
+  margin-top: -33px;
+  margin-bottom: 36px;
 }
 
 .u-section-8 .u-layout-cell-3 {
@@ -1958,6 +2059,7 @@
 
 .u-section-8 .u-btn-3 {
   background-image: none;
+  font-size: 2.75rem;
   padding: 0;
 }
 
@@ -1974,23 +2076,18 @@
 
 @media (max-width: 1199px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 794px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-top: -37px;
-  }
-
-  .u-section-8 .u-layout-wrap-1 {
-    margin-top: 1260px;
+    min-height: 872px;
   }
 
   .u-section-8 .u-layout-cell-1 {
-    min-height: 294px;
+    min-height: 302px;
   }
 
   .u-section-8 .u-image-1 {
-    width: 460px;
+    width: 286px;
+    height: 282px;
+    margin-top: 10px;
+    margin-right: 80px;
   }
 
   .u-section-8 .u-layout-cell-2 {
@@ -2003,16 +2100,19 @@
   }
 
   .u-section-8 .u-layout-wrap-2 {
-    margin-top: 1260px;
+    margin-top: -10px;
+    margin-bottom: 60px;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 294px;
+    min-height: 315px;
   }
 
   .u-section-8 .u-image-3 {
-    width: 460px;
-    height: 305px;
+    width: 394px;
+    height: 273px;
+    margin-top: 30px;
+    margin-right: 20px;
   }
 
   .u-section-8 .u-layout-cell-4 {
@@ -2023,27 +2123,26 @@
     font-size: 2.375rem;
     margin-right: 0;
   }
+
+  .u-section-8 .u-btn-3 {
+    font-size: 2.375rem;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 656px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-top: 45px;
-  }
-
-  .u-section-8 .u-layout-wrap-1 {
-    margin-top: 1053px;
+    min-height: 844px;
   }
 
   .u-section-8 .u-layout-cell-1 {
-    min-height: 225px;
+    min-height: 300px;
   }
 
   .u-section-8 .u-image-1 {
-    width: 350px;
+    width: 309px;
+    height: 290px;
+    margin-top: 0;
+    margin-right: auto;
   }
 
   .u-section-8 .u-layout-cell-2 {
@@ -2051,11 +2150,12 @@
   }
 
   .u-section-8 .u-layout-wrap-2 {
-    margin-top: 1053px;
+    margin-top: -9px;
+    margin-bottom: 12px;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 225px;
+    min-height: 241px;
   }
 
   .u-section-8 .u-image-3 {
@@ -2065,25 +2165,27 @@
   }
 
   .u-section-8 .u-layout-cell-4 {
-    min-height: 100px;
+    min-height: 353px;
+  }
+
+  .u-section-8 .u-text-5 {
+    width: auto;
+    margin-top: 7px;
+    margin-right: -97px;
+  }
+
+  .u-section-8 .u-btn-3 {
+    font-size: 1.8125rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 1082px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-top: 319px;
-  }
-
-  .u-section-8 .u-layout-wrap-1 {
-    margin-top: 796px;
+    min-height: 1438px;
   }
 
   .u-section-8 .u-layout-cell-1 {
-    min-height: 338px;
+    min-height: 320px;
   }
 
   .u-section-8 .u-container-layout-1 {
@@ -2091,17 +2193,47 @@
     padding-right: 50px;
   }
 
+  .u-section-8 .u-image-1 {
+    width: 316px;
+    margin-top: 12px;
+  }
+
+  .u-section-8 .u-layout-cell-2 {
+    min-height: 250px;
+  }
+
   .u-section-8 .u-container-layout-2 {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 15px 50px 1px;
+  }
+
+  .u-section-8 .u-image-2 {
+    margin-top: 0;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: auto;
+    margin-top: 25px;
+    margin-left: 118px;
+  }
+
+  .u-section-8 .u-text-3 {
+    width: auto;
+    margin-top: 6px;
+  }
+
+  .u-section-8 .u-btn-2 {
+    margin-top: 15px;
+    margin-left: auto;
   }
 
   .u-section-8 .u-layout-wrap-2 {
-    margin-top: 796px;
+    margin-top: 16px;
+    margin-bottom: 46px;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 338px;
+    min-height: 296px;
   }
 
   .u-section-8 .u-container-layout-3 {
@@ -2109,72 +2241,148 @@
     padding-right: 50px;
   }
 
+  .u-section-8 .u-image-3 {
+    margin-top: 43px;
+    margin-right: auto;
+  }
+
+  .u-section-8 .u-layout-cell-4 {
+    min-height: 246px;
+  }
+
   .u-section-8 .u-container-layout-4 {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 0 35px;
+  }
+
+  .u-section-8 .u-image-4 {
+    margin-top: 12px;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-text-4 {
+    width: auto;
+    margin-top: 3px;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-text-5 {
+    width: 291px;
+    margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-8 .u-btn-4 {
+    margin-top: 16px;
+    margin-right: 187px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 832px;
+    min-height: 1222px;
   }
 
   .u-section-8 .u-text-1 {
-    font-size: 1.5rem;
-    margin-top: 179px;
-  }
-
-  .u-section-8 .u-layout-wrap-1 {
-    margin-top: 1223px;
+    font-size: 2.5rem;
   }
 
   .u-section-8 .u-layout-cell-1 {
-    min-height: 213px;
+    min-height: 302px;
   }
 
   .u-section-8 .u-container-layout-1 {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   .u-section-8 .u-image-1 {
     width: 290px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 54px;
+  }
+
+  .u-section-8 .u-layout-cell-2 {
+    min-height: 258px;
   }
 
   .u-section-8 .u-container-layout-2 {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-8 .u-image-2 {
+    margin-top: 7px;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-top: 14px;
+    margin-left: 58px;
   }
 
   .u-section-8 .u-text-3 {
     font-size: 1.625rem;
+    margin-top: 7px;
+    margin-right: 20px;
+    margin-left: 66px;
+  }
+
+  .u-section-8 .u-btn-2 {
+    margin-top: 4px;
   }
 
   .u-section-8 .u-layout-wrap-2 {
-    margin-top: 1223px;
+    margin-bottom: 0;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 213px;
+    min-height: 226px;
   }
 
   .u-section-8 .u-container-layout-3 {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-8 .u-image-3 {
     width: 340px;
-    height: 215px;
+    height: 216px;
+    margin-top: 0;
+    margin-right: -8px;
+  }
+
+  .u-section-8 .u-layout-cell-4 {
+    min-height: 314px;
   }
 
   .u-section-8 .u-container-layout-4 {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-8 .u-image-4 {
+    margin-top: 34px;
+  }
+
+  .u-section-8 .u-text-4 {
+    margin-top: 12px;
   }
 
   .u-section-8 .u-text-5 {
     font-size: 1.625rem;
+    width: auto;
+    margin-right: 47px;
+    margin-left: 40px;
+  }
+
+  .u-section-8 .u-btn-3 {
+    font-size: 1.5625rem;
+  }
+
+  .u-section-8 .u-btn-4 {
+    margin-top: 3px;
+    margin-right: auto;
   }
 }
