--- a/노는법.css
+++ b/노는법.css
@@ -131,7 +131,7 @@
     margin-top: 77px;
   }
 }.u-section-3 {
-  background-image: url("images/yyyy.jpg");
+  background-image: url("images/KakaoTalk_Photo_2021-07-15-22-13-26.jpeg");
   background-position: 50% 50%;
 }
 
@@ -798,15 +798,6 @@
   padding: 10px;
 }
 
-.u-section-5 .u-carousel-item-7 {
-  margin-right: 0;
-}
-
-.u-section-5 .u-over-slide-7 {
-  min-height: 100px;
-  padding: 10px;
-}
-
 .u-section-5 .u-carousel-thumbnails-1 {
   padding: 0;
 }
@@ -837,11 +828,6 @@
 }
 
 .u-section-5 .u-carousel-thumbnail-6 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-7 {
   width: 100px;
   height: 100px;
 }
@@ -896,11 +882,6 @@
     width: 77px;
     height: 77px;
   }
-
-  .u-section-5 .u-carousel-thumbnail-7 {
-    width: 77px;
-    height: 77px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -940,10 +921,6 @@
     padding: 30px;
   }
 
-  .u-section-5 .u-over-slide-7 {
-    padding: 30px;
-  }
-
   .u-section-5 .u-carousel-thumbnail-1 {
     width: 49px;
     height: 49px;
@@ -974,11 +951,6 @@
     height: 49px;
   }
 
-  .u-section-5 .u-carousel-thumbnail-7 {
-    width: 49px;
-    height: 49px;
-  }
-
   .u-section-5 .u-carousel-control-1 {
     left: 10px;
     right: auto;
@@ -1000,7 +972,7 @@
   font-size: 4.375rem;
   font-weight: 700;
   animation-duration: 1000ms;
-  margin: 158px 0 0 427px;
+  margin: 158px 0 0 372px;
 }
 
 .u-section-6 .u-layout-wrap-1 {
@@ -1147,7 +1119,7 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: 227px;
+    margin-left: 172px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1189,7 +1161,7 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: 7px;
+    margin-left: 0;
   }
 
   .u-section-6 .u-image-1 {
@@ -1248,10 +1220,6 @@
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
     min-height: 2006px;
-  }
-
-  .u-section-6 .u-text-1 {
-    margin-left: 0;
   }
 
   .u-section-6 .u-image-1 {
@@ -1596,45 +1564,57 @@
   }
 
   .u-section-7 .u-group-1 {
+    min-height: 402px;
     height: auto;
   }
 
   .u-section-7 .u-text-2 {
-    margin-left: 0;
+    width: auto;
+    margin-left: 12px;
+    margin-right: 12px;
   }
 
   .u-section-7 .u-text-3 {
     width: auto;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: 8px;
+    margin-right: 12px;
+    margin-left: 19px;
   }
 
   .u-section-7 .u-group-2 {
+    min-height: 402px;
     height: auto;
   }
 
   .u-section-7 .u-text-4 {
-    margin-left: 0;
+    width: auto;
+    margin-left: 12px;
+    margin-right: 12px;
   }
 
   .u-section-7 .u-text-5 {
     width: auto;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: 8px;
+    margin-right: 12px;
+    margin-left: 19px;
   }
 
   .u-section-7 .u-group-3 {
+    min-height: 402px;
     height: auto;
   }
 
   .u-section-7 .u-text-6 {
-    margin-left: 0;
+    width: auto;
+    margin-left: 12px;
+    margin-right: 12px;
   }
 
   .u-section-7 .u-text-7 {
     width: auto;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: 8px;
+    margin-right: 12px;
+    margin-left: 19px;
   }
 
   .u-section-7 .u-list-2 {
@@ -1664,6 +1644,7 @@
   }
 
   .u-section-7 .u-group-5 {
+    min-height: 370px;
     height: auto;
   }
 
@@ -1680,6 +1661,7 @@
   }
 
   .u-section-7 .u-group-6 {
+    min-height: 370px;
     height: auto;
   }
 
@@ -1706,16 +1688,34 @@
     min-height: 710px;
   }
 
+  .u-section-7 .u-text-2 {
+    margin-left: 0;
+    margin-right: 23px;
+  }
+
   .u-section-7 .u-text-3 {
     margin-right: 23px;
+    margin-left: 15px;
+  }
+
+  .u-section-7 .u-text-4 {
+    margin-right: 23px;
+    margin-left: 0;
   }
 
   .u-section-7 .u-text-5 {
     margin-right: 23px;
+    margin-left: 15px;
+  }
+
+  .u-section-7 .u-text-6 {
+    margin-right: 23px;
+    margin-left: 0;
   }
 
   .u-section-7 .u-text-7 {
     margin-right: 23px;
+    margin-left: 15px;
   }
 
   .u-section-7 .u-list-2 {
@@ -1858,7 +1858,6 @@
   }
 
   .u-section-7 .u-text-2 {
-    width: auto;
     margin-top: 13px;
     margin-right: 32px;
     margin-left: 136px;
@@ -1875,7 +1874,6 @@
   }
 
   .u-section-7 .u-text-4 {
-    width: auto;
     margin-top: 13px;
     margin-right: 32px;
     margin-left: 136px;
@@ -1892,7 +1890,6 @@
   }
 
   .u-section-7 .u-text-6 {
-    width: auto;
     margin-top: 13px;
     margin-right: 32px;
     margin-left: 136px;
