--- a/nicepage.css
+++ b/nicepage.css
@@ -34476,6 +34476,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-btn-2 {
+    margin-top: -22px;
     margin-right: 330px;
   }
 
