--- a/노는법.css
+++ b/노는법.css
@@ -52,9 +52,11 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-    margin-right: 0;
-    margin-left: 52px;
+    font-size: 3.125rem;
+    width: auto;
+    margin-top: 425px;
+    margin-right: 52px;
+    margin-left: 0;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 50vw;
@@ -179,16 +181,26 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 {
+    background-position: 58.29% 100%;
+    background-size: auto 130%;
+  }
+
   .u-section-3 .u-sheet-1 {
     min-height: 852px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 2.5rem;
+    width: auto;
+    margin-top: 133px;
   }
 
   .u-section-3 .u-text-2 {
     font-size: 1.25rem;
+    width: auto;
+    margin-top: 198px;
+    margin-bottom: 45px;
   }
 }.u-section-4 {
   background-image: none;
@@ -218,12 +230,18 @@
   margin-bottom: 53px;
 }
 
+.u-section-4 .u-carousel-indicators-1 {
+  position: absolute;
+  bottom: 10px;
+}
+
 .u-section-4 .u-carousel-item-1 {
   margin-right: 0;
 }
 
 .u-section-4 .u-over-slide-1 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -233,6 +251,7 @@
 
 .u-section-4 .u-over-slide-2 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -242,6 +261,7 @@
 
 .u-section-4 .u-over-slide-3 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -251,6 +271,7 @@
 
 .u-section-4 .u-over-slide-4 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -260,6 +281,7 @@
 
 .u-section-4 .u-over-slide-5 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -269,6 +291,7 @@
 
 .u-section-4 .u-over-slide-6 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -278,6 +301,7 @@
 
 .u-section-4 .u-over-slide-7 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -287,6 +311,7 @@
 
 .u-section-4 .u-over-slide-8 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -296,6 +321,7 @@
 
 .u-section-4 .u-over-slide-9 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -305,6 +331,7 @@
 
 .u-section-4 .u-over-slide-10 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -314,66 +341,8 @@
 
 .u-section-4 .u-over-slide-11 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
-}
-
-.u-section-4 .u-carousel-thumbnails-1 {
-  padding: 0;
-}
-
-.u-section-4 .u-carousel-thumbnail-1 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-2 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-3 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-4 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-5 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-6 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-7 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-8 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-9 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-10 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-4 .u-carousel-thumbnail-11 {
-  width: 100px;
-  height: 100px;
 }
 
 .u-section-4 .u-carousel-control-1 {
@@ -385,202 +354,26 @@
 
 .u-section-4 .u-carousel-control-2 {
   position: absolute;
-  right: 100px;
   width: 40px;
   height: 40px;
+  left: auto;
+  right: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-text-2 {
     margin-right: 0;
   }
-
-  .u-section-4 .u-carousel-thumbnail-1 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-2 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-3 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-4 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-5 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-6 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-7 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-8 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-9 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-10 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-11 {
-    width: 85px;
-    height: 85px;
-  }
-
-  .u-section-4 .u-carousel-control-2 {
-    right: 85px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-4 .u-carousel-thumbnail-1 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-2 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-3 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-4 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-5 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-6 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-7 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-8 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-9 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-10 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-11 {
-    width: 65px;
-    height: 65px;
-  }
-
-  .u-section-4 .u-carousel-control-2 {
-    right: 65px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-4 .u-carousel-thumbnail-1 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-2 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-3 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-4 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-5 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-6 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-7 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-8 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-9 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-10 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-11 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-4 .u-carousel-control-2 {
-    right: 49px;
-  }
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 773px;
+  }
+
   .u-section-4 .u-text-1 {
     font-size: 2.5rem;
-    margin-top: 60px;
+    margin-top: 61px;
   }
 
   .u-section-4 .u-text-2 {
@@ -590,8 +383,9 @@
   }
 
   .u-section-4 .u-gallery-1 {
+    height: 341px;
     margin-top: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
   }
 
   .u-section-4 .u-over-slide-1 {
@@ -637,65 +431,6 @@
   .u-section-4 .u-over-slide-11 {
     padding: 30px;
   }
-
-  .u-section-4 .u-carousel-thumbnail-1 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-2 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-3 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-4 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-5 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-6 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-7 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-8 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-9 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-10 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-thumbnail-11 {
-    width: 31px;
-    height: 31px;
-  }
-
-  .u-section-4 .u-carousel-control-2 {
-    right: 31px;
-  }
 }.u-section-5 {
   background-image: none;
 }
@@ -730,6 +465,7 @@
 
 .u-section-5 .u-over-slide-1 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -739,6 +475,7 @@
 
 .u-section-5 .u-over-slide-2 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -748,6 +485,7 @@
 
 .u-section-5 .u-over-slide-3 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -757,6 +495,7 @@
 
 .u-section-5 .u-over-slide-4 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -766,6 +505,7 @@
 
 .u-section-5 .u-over-slide-5 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
 }
 
@@ -775,41 +515,8 @@
 
 .u-section-5 .u-over-slide-6 {
   min-height: 100px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 10px;
-}
-
-.u-section-5 .u-carousel-thumbnails-1 {
-  padding: 0;
-}
-
-.u-section-5 .u-carousel-thumbnail-1 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-2 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-3 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-4 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-5 {
-  width: 100px;
-  height: 100px;
-}
-
-.u-section-5 .u-carousel-thumbnail-6 {
-  width: 100px;
-  height: 100px;
 }
 
 .u-section-5 .u-carousel-control-1 {
@@ -833,48 +540,29 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-carousel-thumbnail-1 {
-    width: 77px;
-    height: 77px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-2 {
-    width: 77px;
-    height: 77px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-3 {
-    width: 77px;
-    height: 77px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-4 {
-    width: 77px;
-    height: 77px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-5 {
-    width: 77px;
-    height: 77px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-6 {
-    width: 77px;
-    height: 77px;
+  .u-section-5 .u-carousel-control-2 {
+    left: auto;
+    right: 0;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 735px;
+  }
+
   .u-section-5 .u-text-1 {
     font-size: 2.5rem;
   }
 
   .u-section-5 .u-text-2 {
     font-size: 1.25rem;
+    width: auto;
   }
 
   .u-section-5 .u-gallery-1 {
-    margin-bottom: 60px;
+    height: 315px;
+    margin-bottom: 30px;
   }
 
   .u-section-5 .u-over-slide-1 {
@@ -901,44 +589,8 @@
     padding: 30px;
   }
 
-  .u-section-5 .u-carousel-thumbnail-1 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-2 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-3 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-4 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-5 {
-    width: 49px;
-    height: 49px;
-  }
-
-  .u-section-5 .u-carousel-thumbnail-6 {
-    width: 49px;
-    height: 49px;
-  }
-
   .u-section-5 .u-carousel-control-1 {
-    left: 10px;
     right: auto;
-  }
-
-  .u-section-5 .u-carousel-control-2 {
-    left: auto;
-    right: 14px;
   }
 }.u-section-6 {
   background-image: none;
@@ -1095,11 +747,17 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 1450px;
+    min-height: 1841px;
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: 172px;
+    width: auto;
+    margin-top: 60px;
+    margin-left: 207px;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    margin-top: 53px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1199,7 +857,7 @@
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 2006px;
+    min-height: 2821px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1216,6 +874,10 @@
     padding-right: 10px;
   }
 
+  .u-section-6 .u-layout-cell-3 {
+    order: 1;
+  }
+
   .u-section-6 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
@@ -1223,6 +885,7 @@
 
   .u-section-6 .u-image-2 {
     min-height: 302px;
+    order: 0;
   }
 
   .u-section-6 .u-container-layout-4 {
@@ -1244,6 +907,10 @@
     padding-right: 10px;
   }
 
+  .u-section-6 .u-layout-cell-7 {
+    order: 1;
+  }
+
   .u-section-6 .u-container-layout-7 {
     padding-left: 10px;
     padding-right: 10px;
@@ -1251,6 +918,7 @@
 
   .u-section-6 .u-image-4 {
     min-height: 351px;
+    order: 0;
   }
 
   .u-section-6 .u-container-layout-8 {
@@ -1261,18 +929,12 @@
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 2495px;
+    min-height: 2269px;
   }
 
   .u-section-6 .u-text-1 {
     font-size: 2.5rem;
-    width: auto;
-    margin-top: 47px;
     margin-right: auto;
-  }
-
-  .u-section-6 .u-layout-wrap-1 {
-    margin-top: 69px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1283,17 +945,20 @@
     font-size: 1.875rem;
   }
 
-  .u-section-6 .u-layout-cell-3 {
-    order: 1;
+  .u-section-6 .u-text-3 {
+    font-size: 1.25rem;
   }
 
   .u-section-6 .u-text-4 {
     font-size: 1.875rem;
   }
 
+  .u-section-6 .u-text-5 {
+    font-size: 1.25rem;
+  }
+
   .u-section-6 .u-image-2 {
     min-height: 190px;
-    order: 0;
   }
 
   .u-section-6 .u-image-3 {
@@ -1304,17 +969,20 @@
     font-size: 1.875rem;
   }
 
-  .u-section-6 .u-layout-cell-7 {
-    order: 1;
+  .u-section-6 .u-text-7 {
+    font-size: 1.25rem;
   }
 
   .u-section-6 .u-text-8 {
     font-size: 1.875rem;
   }
 
+  .u-section-6 .u-text-9 {
+    font-size: 1.25rem;
+  }
+
   .u-section-6 .u-image-4 {
     min-height: 221px;
-    order: 0;
   }
 }.u-section-7 {
   background-image: none;
@@ -1544,7 +1212,7 @@
   }
 
   .u-section-7 .u-group-1 {
-    min-height: 402px;
+    min-height: 459px;
     height: auto;
   }
 
@@ -1557,12 +1225,11 @@
   .u-section-7 .u-text-3 {
     width: auto;
     margin-top: 8px;
-    margin-right: 12px;
-    margin-left: 19px;
+    margin-right: 22px;
   }
 
   .u-section-7 .u-group-2 {
-    min-height: 402px;
+    min-height: 459px;
     height: auto;
   }
 
@@ -1575,12 +1242,11 @@
   .u-section-7 .u-text-5 {
     width: auto;
     margin-top: 8px;
-    margin-right: 12px;
-    margin-left: 19px;
+    margin-right: 22px;
   }
 
   .u-section-7 .u-group-3 {
-    min-height: 402px;
+    min-height: 459px;
     height: auto;
   }
 
@@ -1593,8 +1259,7 @@
   .u-section-7 .u-text-7 {
     width: auto;
     margin-top: 8px;
-    margin-right: 12px;
-    margin-left: 19px;
+    margin-right: 22px;
   }
 
   .u-section-7 .u-list-2 {
@@ -2159,6 +1824,16 @@
 @media (max-width: 767px) {
   .u-section-8 .u-sheet-1 {
     min-height: 1438px;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: auto;
+    margin-top: 48px;
+    margin-right: auto;
+  }
+
+  .u-section-8 .u-layout-wrap-1 {
+    margin-top: 62px;
   }
 
   .u-section-8 .u-layout-cell-1 {
